[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/theme/greyTheme.tres" type="Theme" id=1]
[ext_resource path="res://UI/GameUI/equipmentMenu/equipRibbon.gd" type="Script" id=2]
[ext_resource path="res://UI/GameUI/equipmentMenu/equipPanel.tscn" type="PackedScene" id=3]

[node name="headRibbon" type="HBoxContainer"]
anchor_top = 0.000925926
anchor_right = 0.201042
anchor_bottom = 0.0601852
rect_min_size = Vector2( 0, 64 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="column" type="VBoxContainer" parent="."]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )

[node name="text" type="Label" parent="column"]
margin_right = 64.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
text = "Head"
align = 1
valign = 1

[node name="doffButton" type="Button" parent="column"]
margin_top = 44.0
margin_right = 64.0
margin_bottom = 64.0
text = "doff"

[node name="equipPanel" parent="." instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0

[node name="equipPanel2" parent="." instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0

[node name="equipPanel3" parent="." instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 204.0
margin_right = 268.0
margin_bottom = 64.0

[node name="equipPanel4" parent="." instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 272.0
margin_right = 336.0
margin_bottom = 64.0

[connection signal="pressed" from="column/doffButton" to="." method="_on_doffButton_pressed"]
